Fix: Disable scrollbar for content slides
fix #142

--- a/Resources/Private/Stylesheets/theme.scss
+++ b/Resources/Private/Stylesheets/theme.scss
@@ -46,7 +46,6 @@ $slick-loader-path: '~slick-carousel/slick/' !default;
         height: 100%;
         padding: 30px;
         z-index: 5;
-        overflow: scroll;
 
         p,
         span,
